--- a/index.html
+++ b/index.html
@@ -11,28 +11,52 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 
 </head>
-<body onload="showList();isLogin();">
-<ul>
-    <li><a href="index.html">Trang chủ</a></li>
-    <li><a href="#news">Tin tức</a></li>
-    <li><a href="#contact">Liên hệ</a></li>
-    <li><a href="#about">Thông tin thêm</a></li>
-    <li><a href="#Hotline">Hotline</a></li>
+<body onload="showList();logedinHello()">
+<nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="javascript:void(0)"><img width="50" height="50" src="2250026_game_gameboy_handheld_nintendo_portable_icon.png"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-    <li id="search">
-        <div class="container-input">
-            <input type="text" placeholder="Search" name="text" class="input" id="searchInput" oninput="search()">
-
+        <div class="collapse navbar-collapse" id="mynavbar">
+            <ul class="navbar-nav me-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">Trang chủ</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="javascript:void(0)">Link</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="javascript:void(0)">Link</a>
+                </li>
+                <li class="nav-item" >
+                    <a class="nav-link" href="register.html" id="loginBtn">Đăng nhập</a>
+                </li>
+                <li class="nav-item" >
+                    <a class="nav-link" href="index.html" style="display: none" id="logoutBtn" onclick="logOut()">Đăng xuất</a>
+                </li>
+                <li class="nav-item" value="Tên đăng nhập">
+                    <a class="nav-link" href="#">Xin chào, <span style="color: red" id="usernameHello"></span></a>
+                </li>
+            </ul>
+            <form class="d-flex">
+                <input class="form-control me-2" type="text" placeholder="Search" id="searchInput" oninput="search()">
+                <button class="btn btn-primary" type="button">Search</button>
+            </form>
+            <button class="cssbuttons-io-button" id="addGameBtn" style="float: right;display: none" onclick="showAddGame()">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"></path><path fill="currentColor" d="M11 11V5h2v6h6v2h-6v6h-2v-6H5v-2z"></path></svg>
+                <span>Thêm sản phẩm game mới</span>
+            </button>
+            <button onclick="showCart()">Giỏ hàng</button>
         </div>
-    </li>
-        <button style="margin-left: 700px" id="cartBtn" onclick="showCart()">Giỏ hàng</button>
-    <li style="float: right"><a href="register.html">Đăng nhập</a></li>
-</ul>
-<div id="cart" style="float: right"></div>
-<button class="cssbuttons-io-button" style="float: right" onclick="showAddGame()">
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"></path><path fill="currentColor" d="M11 11V5h2v6h6v2h-6v6h-2v-6H5v-2z"></path></svg>
-    <span>Thêm sản phẩm game mới</span>
-</button>
+    </div>
+</nav>
+<div id="cart-frame" style="display: none">
+    <img width="50" height="50" src="cart.png"><img style="margin-left: 100px" width="30" height="30" src="minimize.png" onclick="hideCart()">
+    <p id="cart" style="float: right "></p>
+</div>
+
 <table id="infoTable" style="display: none;width: 300px;float: right">
     <tr>
         <th colSpan="2">Thông tin game<button style="float: right;width: 50px" onclick="hideAddGame()">-</button></th>
@@ -56,14 +80,14 @@
     <tr>
         <td></td>
         <td>
-            <button onClick="addGame()">ADD</button>
-            <button onClick="editGame()">Save</button>
+            <button onclick="addGame()" >ADD</button>
+            <button onclick="editGame()">Save</button>
         </td>
     </tr>
 </table>
 <div id="list-game"></div>
 
-<footer class>
+<footer class="footer">
     <div class="container">
         <div class="row">
             <div class="col-md-4">
@@ -83,7 +107,7 @@
                 </ul>
             </div>
             <div class="col-md-4">
-                <h3 onclick="show()">Theo dõi chúng tôi</h3>
+                <h3>Theo dõi chúng tôi</h3>
                 <ul class="social">
                     <li><a href="#"><i class="fab fa-facebook"></i></a></li>
                     <li><a href="#"><i class="fab fa-twitter"></i></a></li>
