--- a/register.html
+++ b/register.html
@@ -4,30 +4,33 @@
     <meta charset="UTF-8">
     <title>Đăng nhập / Đăng ký</title>
 <link rel="stylesheet" href="register.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
-<body>
+<body class="background">
 
 <div id="formLogin">
  <fieldset style="width: 300px">
-     <form method="post"  target="_blank" >
+
      <legend style="text-align: center">Đăng nhập</legend>
          <p>Username : <input type="text" placeholder="Tên đăng nhập" id="userNameLogin"></p>
          <p>Password : <input type="password" placeholder="Mật khẩu" id="passWordLogin"></p>
-         <button type="button" style="margin-left: 20px" onclick="login()">Đăng nhập</button>
-         <button type="button" style="margin-left: 80px" onclick="showRegForm()"> Đăng ký </button>
-     </form>
+         <button class="btn btn-info" type="button" style="margin-left: 60px" onclick="login();changeBackground()">Đăng nhập</button>
+         <button class="btn btn-info" type="button" style="margin-left: 10px" onclick="showRegForm();changeBackground()"> Đăng ký </button>
+
  </fieldset>
 </div>
 <div id="formRegister" style="display: none">
-    <h1>Đăng ký</h1>
+    <fieldset style="width: 300px;height: 400px">
+    <legend style="text-align: center">Đăng ký</legend>
     <input type="text" placeholder="Họ và tên" id="regName"/><br>
     <input type="text" placeholder="Email" id="regEmail"/><br>
     <input type="text" placeholder="Tên đăng nhập" id="regUsername"/><br>
     <input type="password" placeholder="Mật khẩu" id="regPassword"/><br>
     <input type="text" placeholder="Số điện thoại" id="regPhoneNumber"/><br>
-    <input type="checkbox" />Tôi đồng ý với các điều khoản <br>
-    <input type="button" value="Tạo tài khoản" onclick="regNewAcc()"/>
-    <button type="button" onclick="showLoginForm()">Đăng nhập</button>
+    <button style="margin-left: 10px" class="btn btn-info" type="button" onclick="regNewAcc();changeBackground()">Tạo tài khoản</button>
+    <button style="margin-left: 20px" class="btn btn-info" type="button" onclick="showLoginForm();changeBackground()">Đăng nhập</button>
+    </fieldset>
 </div>
 
 
