--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 </nav>
 <div id="cart-frame" style="display: none">
     <button class="btn btn-danger" onclick="deleteCart()">Clear</button>
-    <img width="30" height="30" src="minimize.png" style="margin-left: 90px;position: absolute" onclick="hideCart()">
+    <img width="30" height="30" src="minimize.png" style="float: right" onclick="hideCart()">
     <p id="cart" ></p>
     <p id="totalPrice"></p>
 </div>
