--- a/register.html
+++ b/register.html
@@ -3,33 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <title>Đăng nhập / Đăng ký</title>
-<link rel="stylesheet" href="register.css">
+    <link rel="stylesheet" href="register.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body class="background">
 
 <div id="formLogin">
- <fieldset style="width: 300px">
+    <fieldset style="width: 300px">
 
-     <legend style="text-align: center">Đăng nhập</legend>
-         <p>Username : <input type="text" placeholder="Tên đăng nhập" id="userNameLogin"></p>
-         <p>Password : <input type="password" placeholder="Mật khẩu" id="passWordLogin"></p>
-         <button class="btn btn-info" type="button" style="margin-left: 60px" onclick="login();changeBackground()">Đăng nhập</button>
-         <button class="btn btn-info" type="button" style="margin-left: 10px" onclick="showRegForm();changeBackground()"> Đăng ký </button>
+        <legend style="text-align: center">Đăng nhập</legend>
+        <p>Username : <input type="text" placeholder="Tên đăng nhập" id="userNameLogin"></p>
+        <p>Password : <input type="password" placeholder="Mật khẩu" id="passWordLogin"></p>
+        <button class="btn btn-info" type="button" style="margin-left: 60px" onclick="login();changeBackground()">Đăng
+            nhập
+        </button>
+        <button class="btn btn-info" type="button" style="margin-left: 10px" onclick="showRegForm();changeBackground()">
+            Đăng ký
+        </button>
 
- </fieldset>
+    </fieldset>
 </div>
 <div id="formRegister" style="display: none">
     <fieldset style="width: 300px;height: 400px">
-    <legend style="text-align: center">Đăng ký</legend>
-    <input type="text" placeholder="Họ và tên" id="regName"/><br>
-    <input type="text" placeholder="Email" id="regEmail"/><br>
-    <input type="text" placeholder="Tên đăng nhập" id="regUsername"/><br>
-    <input type="password" placeholder="Mật khẩu" id="regPassword"/><br>
-    <input type="text" placeholder="Số điện thoại" id="regPhoneNumber"/><br>
-    <button style="margin-left: 10px" class="btn btn-info" type="button" onclick="regNewAcc();changeBackground()">Tạo tài khoản</button>
-    <button style="margin-left: 20px" class="btn btn-info" type="button" onclick="showLoginForm();changeBackground()">Đăng nhập</button>
+        <legend style="text-align: center">Đăng ký</legend>
+        <input type="text" placeholder="Họ và tên" id="regName"/><br>
+        <input type="text" placeholder="Email" id="regEmail"/><br>
+        <input type="text" placeholder="Tên đăng nhập" id="regUsername"/><br>
+        <input type="password" placeholder="Mật khẩu" id="regPassword"/><br>
+        <input type="text" placeholder="Số điện thoại" id="regPhoneNumber"/><br>
+        <button style="margin-left: 10px" class="btn btn-info" type="button" onclick="regNewAcc();changeBackground()">
+            Tạo tài khoản
+        </button>
+        <button style="margin-left: 20px" class="btn btn-info" type="button"
+                onclick="showLoginForm();changeBackground()">Đăng nhập
+        </button>
     </fieldset>
 </div>
 
